<resources>
    <string name="app_name">RPG Game Control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Game control actions</string>
    <string name="nav_header_subtitle">Manage players, NPCs and items in a RPG game</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_npc_title">NPCs</string>
    <string name="drawer_item_title">Items</string>
    <string name="drawer_creature_title">Creatures</string>
    <string name="drawer_vocation_title">Vocations</string>
    <string name="drawer_char_title">Characters</string>
    <string name="drawer_char_about">About</string>
    <string name="about_creator_title">CREATED BY</string>
    <string name="about_creator_name">Guilherme Bigois</string>
    <string name="about_creator_id">RM: 76669</string>
    <string name="about_creator_class">3º SIR</string>
    <string name="settings_title_registration">USER REGISTRATION</string>
    <string name="settings_title_registred">REGISTRED USERS</string>
    <string name="chars_title_registration">CHARACTER REGISTRATION</string>
    <string name="chars_title_registred">REGISTRED CHARACTERS</string>
    <string name="vocation_title_registration">VOCATION REGISTRATION</string>
    <string name="vocation_title_registred">REGISTRED VOCATIONS</string>
    <string name="creature_title_registration">CREATURE REGISTRATION</string>
    <string name="creature_title_registred">REGISTRED CREATURES</string>
    <string name="item_title_registration">ITEM REGISTRATION</string>
    <string name="item_title_registred">REGISTRED ITEMS</string>
    <string name="npc_title_registration">NPC REGISTRATION</string>
    <string name="npc_title_registred">REGISTRED NPCS</string>
    <string name="settings_button_back">BACK</string>
    <string name="settings_hint_email">username@account.com</string>
    <string name="settings_hint_username">nickname</string>
    <string name="settings_button_submit">SUBMIT</string>
    <string name="settings_message_empty_fields">Oops... There\'re empty fields</string>
    <string name="settings_message_success">New user data added successfully</string>
    <string name="settings_layout_label_nickname">NICKNAME:</string>
    <string name="settings_layout_label_email">E-MAIL:</string>
</resources>
