<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_npc"
            android:icon="@drawable/ic_menu_npc"
            android:title="@string/drawer_npc_title" />
        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/ic_menu_item"
            android:title="@string/drawer_item_title" />
        <item
            android:id="@+id/nav_creature"
            android:icon="@drawable/ic_menu_creature"
            android:title="@string/drawer_creature_title" />
        <item
            android:id="@+id/nav_vocation"
            android:icon="@drawable/ic_menu_vocation"
            android:title="@string/drawer_vocation_title" />
        <item
            android:id="@+id/nav_char"
            android:icon="@drawable/ic_menu_char"
            android:title="@string/drawer_char_title" />
    </group>
</menu>
